# curly-enigma

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .markdownlint.yml  .mega-linter.yml  .tool-versions  .yamllint.yml  CMakeLists.txt  LICENSE  README.md  conanfile.py  mise.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: build.yml  gate-retrigger.yml  gate.yml  lint.yml  publish.yml  release.yml  verify.yml
cmake/: numopsConfig.cmake.in
conan/profiles/: linux-x86_64  macos-armv8  windows-x86_64
include/numops/: numops.h
scripts/: setup-repo.sh
src/: numops.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/: CMakeLists.txt  test_numops.cpp
tests/integration/: CMakeLists.txt  conanfile.txt
tests/integration/src/: main.cpp
